[package]
name = "javelin"
version = "0.1.0"
description = "Like harpoon"
authors = ["Drew Harris <drew@drewh.net>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
pickledb = { version = "0.5.1", features = ["json"] }
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
